<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_events">

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.e_li.eventsviewer.ui.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_requests"
        android:name="com.e_li.eventsviewer.ui.RequestsFragment"
        android:label="@string/title_requests"
        tools:layout="@layout/fragment_requests" />

    <fragment
        android:id="@+id/navigation_enrollments"
        android:name="com.e_li.eventsviewer.ui.EnrollmentsFragment"
        android:label="@string/title_enrollments"
        tools:layout="@layout/fragment_requests" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.e_li.eventsviewer.ui.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>