<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="horizontal"
            android:padding="15dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/e_place_img"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="@color/light_blue"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_weight="1">

                <TextView android:id="@+id/e_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/tournament_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/e_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:drawablePadding="5dp"
                    android:text="@string/place"
                    android:textSize="12sp"
                    app:drawableStartCompat="@drawable/ic_location" />

                <TextView
                    android:id="@+id/e_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:drawablePadding="5dp"
                    android:text="@string/content"
                    android:textSize="12sp"
                    app:drawableStartCompat="@drawable/ic_album" />

                <TextView
                    android:id="@+id/e_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:drawablePadding="5dp"
                    android:text="@string/schedule"
                    android:textSize="12sp"
                    app:drawableStartCompat="@drawable/ic_schedule" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/e_enroll"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="23dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/blue">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_enrollment"
                    android:layout_margin="10dp"
                    app:tint="@color/white"
                    android:contentDescription="@string/title_enrollments" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>